# verstki

./: .flake8  README.md  cataloge.html  contacts.html  main.scc  pyproject.toml
catalog/: urls.py  views.py
catalog/myproject/: requirements.txt
catalog/templates/catalog/: contacts.html  home.html
mypro/: settings.py  urls.py
src/: main.py
